# qwen3-vtuber-tts-server

./: .gitignore  README.md  pyproject.toml
src/qwen3_vtuber_tts/: __init__.py  __main__.py  create_voice_prompt.py  runtime.py  server.py  settings.py  text.py
tests/: test_server.py  test_settings.py  test_text.py
